# fastapi-spawn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
fastapi_spawn/: __init__.py  cli.py  config.py  constants.py  generator.py  interactive.py  steps.py  utils.py  validators.py
fastapi_spawn/templates/alembic/: env.py.j2
fastapi_spawn/templates/app/: main.py.j2
fastapi_spawn/templates/app/admin/: setup.py.j2
fastapi_spawn/templates/app/api/: deps.py.j2  graphql.py.j2
fastapi_spawn/templates/app/api/v1/: health.py.j2  router.py.j2
fastapi_spawn/templates/app/api/v1/auth/: router.py.j2  sso.py.j2
fastapi_spawn/templates/app/api/v1/health/: router.py.j2
fastapi_spawn/templates/app/api/v1/pagination/: router.py.j2
fastapi_spawn/templates/app/api/v1/payments/: router.py.j2
fastapi_spawn/templates/app/api/v1/permissions/: router.py.j2
fastapi_spawn/templates/app/api/v1/streaming/: router.py.j2
fastapi_spawn/templates/app/api/v1/uploads/: router.py.j2
fastapi_spawn/templates/app/api/v1/ws/: router.py.j2
fastapi_spawn/templates/app/core/: ai.py.j2  cache.py.j2  config.py.j2  email.py.j2  exceptions.py.j2  logger.py.j2  logging.py.j2  monitoring.py.j2  notifications.py.j2  ocr.py.j2  permissions.py.j2  search.py.j2  security.py.j2  storage.py.j2  vector_db.py.j2  ws_manager.py.j2
fastapi_spawn/templates/app/db/: session.py.j2
fastapi_spawn/templates/app/frontend/: index.html.j2
fastapi_spawn/templates/app/middleware/: rate_limit.py.j2  request_logger.py.j2  response_format.py.j2
fastapi_spawn/templates/base/: Makefile.j2  README.md.j2  env.j2  env_example.j2  gitignore.j2  pyproject.toml.j2
fastapi_spawn/templates/ci/github/: publish.yml.j2  tests.yml.j2
fastapi_spawn/templates/ci/gitlab/: gitlab-ci.yml.j2
fastapi_spawn/templates/db/: seed.py.j2
fastapi_spawn/templates/docker/: Dockerfile.j2  docker-compose.yml.j2  dockerignore.j2
fastapi_spawn/templates/infra/docker/: docker-compose.prod.yml.j2
fastapi_spawn/templates/infra/helm/: Chart.yaml.j2  values.yaml.j2
fastapi_spawn/templates/infra/terraform/: main.tf.j2  variables.tf.j2
fastapi_spawn/templates/root/: main.py.j2
fastapi_spawn/templates/tasks/: arq_worker.py.j2  celery_app.py.j2  sample_tasks.py.j2
fastapi_spawn/templates/tests/: conftest.py.j2  test_health.py.j2
tests/: __init__.py  test_add_feature.py  test_cli.py  test_generator.py  test_utils.py  test_validators.py
