[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-spawn"
version = "0.4.33"
description = "A powerful CLI tool to scaffold production-ready FastAPI projects with flexible database, auth, broker, and deployment options."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Bishwajit Garai", email = "bishwajitgarai@gmail.com" }]
keywords = [
    "fastapi",
    "scaffold",
    "cli",
    "generator",
    "template",
    "boilerplate",
    "python",
    "project-generator",
    "sqlalchemy",
    "docker",
    "jwt",
    "devtools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "jinja2>=3.1.4",
    "click>=8.1.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
fastapi-spawn = "fastapi_spawn.cli:app"

[project.urls]
Homepage = "https://github.com/Bishwajitgarai/fastapi-spawn"
Documentation = "https://github.com/Bishwajitgarai/fastapi-spawn#readme"
Repository = "https://github.com/Bishwajitgarai/fastapi-spawn"
"Bug Tracker" = "https://github.com/Bishwajitgarai/fastapi-spawn/issues"
Changelog = "https://github.com/Bishwajitgarai/fastapi-spawn/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_spawn"]

[tool.hatch.build.targets.sdist]
include = ["fastapi_spawn/", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fastapi_spawn --cov-report=term-missing"
